--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Log In{% endblock title %}
+
 {% block content %}
 <div class="container">
     <div class="row center">
@@ -25,7 +27,7 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" name="password" placeholder="Password" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary" value="Log In">Login</button>
                 <p>Need an account? <a href="{% url 'accounts:register' %}">Register Here</a></p>
             </form>
         </div>
