--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -27,7 +27,7 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" name="password" placeholder="Password" required>
                 </div>
-                <button type="submit" class="btn btn-primary" value="Log In">Login</button>
+                <button type="submit" class="btn btn-primary" >Login</button>
                 <p>Need an account? <a href="{% url 'accounts:register' %}">Register Here</a></p>
             </form>
         </div>
