--- a/poll/templates/includes/navbar.html
+++ b/poll/templates/includes/navbar.html
@@ -19,8 +19,10 @@
             {% if request.user.is_authenticated %}
             <a class="nav-link" href="{% url 'poll:list_by_user' %}">My Polls</a>
             <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+            <a class="nav-link" href="{% url 'password_change' %}">Change Password</a>
             {% else %}
-            <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+            <a class="nav-link" href="{% url 'password_reset' %}">Password Reset</a>
             <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
             {% endif %}
         </div>
