--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -4,6 +4,5 @@
 
 {% block content %}
     <h1>You Changed Your Password </h1>
-    <p>You changed your password Successfully.</p>
-    <p>Click <a href="{% url 'login' %}"></a> to log in again.</p>
+    <p><a href="{% url 'home' %}">Click here</a>  to go to the homepage </p>
 {% endblock content %}
