--- a/poll/templates/home.html
+++ b/poll/templates/home.html
@@ -18,4 +18,17 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    <p class="footer-text-left">
+        <h4>Created by Krystle Berry & Guillermo Monge</h4>
+    </p>
+    
+    <p>
+        <h5> Copyright 2022</h5>
+    </p>
+</div>
+<div class="footer-content-right">
+    <a href="https://www.twitter.com/DigitalOcean"🐦></a>
+    <a href="https://www.twitter.com"📧></a>
+</div>
 {% endblock content %}
