--- a/static/css/home_style.css
+++ b/static/css/home_style.css
@@ -15,3 +15,42 @@ body {
     text-align: center;
     padding-top: 20%;
 }
+
+/* Footer */
+
+.footer {
+    position:fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+    height: 90px;
+    background-color: #313146;
+    opacity: 0.6;
+}
+.footer-text-left {
+    font-size:25px;
+    padding-left:40px;
+    float:left;
+    word-spacing:20px;
+}
+a.menu:hover {
+    background-color:yellow;
+    font-size:20px;
+}
+
+.footer-content-right {
+padding-right:40px;
+margin-top:20px;
+float:right;
+}
+
+.icon-style {
+height:40px;
+margin-left:20px;
+margin-top:5px;
+}
+
+.icon-style:hover {
+background-color:rgb(209, 69, 14);
+padding:5px;
+}
